# desk-monitor-utility-firmware

./: CMakeLists.txt
src/: app_main.c  main.c  main.h  pinout.h
